# screeps-pathfinding

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: lint.yml
src/: lib.rs
src/algorithms/: astar.rs  dijkstra.rs  mod.rs
src/common/: mod.rs  traits.rs
src/common/data/: mod.rs
src/common/data/test_maps/: test-rooms.json
src/data_structures/: exit.rs  exit_tests.rs  mod.rs
src/utils/: goals.rs  heuristics.rs  mod.rs  movement_costs.rs  neighbors.rs  pathing.rs
src/utils/cache/: lcm_cache_struct.rs  mod.rs  path_cache_struct.rs  terrain_cache_struct.rs
